# pokepra

./: .gitignore  AGENTS.md  README.md  biome.json  bun.lockb  components.json  lefthook.yml  next.config.mjs  next.config.ts  package.json  tsconfig.json
.storybook/: preview.ts  preview.tsx
legacy/: bun.lockb  package.json
legacy/src/: type.d.ts
public/: sw.js  sw.js.map
public/wasm/: rust_wasm_bg.wasm
public/wasm-v1/: rust_wasm_bg.wasm
rust/: Cargo.toml  README.md
rust-experimental/: .gitignore  Cargo.toml  README.md
rust-experimental/src/: cards.rs  evaluation.rs  lib.rs  main.rs
rust-experimental/src/experimental/: arena.rs  core.rs  holdem.rs  mod.rs  simulated_icm.rs
rust-experimental/src/simulation/: cfr_strategy.rs  heads_up.rs  mod.rs  result.rs
rust-wasm/: Cargo.toml  README.md  build.rs
rust-wasm/src/: lib.rs  rs_poker_native.rs  sim.rs
rust/src/: cards.rs  dto.rs  lib.rs  parser.rs  rank.rs  rng.rs
rust/src/sim/: evaluate.rs  mod.rs  parse_range.rs  range_vs_range.rs  vs_list.rs  vs_list_equity.rs
src/: type.d.ts
src/app/: _header.tsx  globals.css  layout.tsx  manifest.json  page.tsx
src/components/: ChangeModeButton.tsx  PositionBadge.tsx  PositionRangeButton.tsx  auto-hand-confirmation.tsx  betting-slider.stories.tsx  betting-slider.tsx  board.stories.tsx  board.tsx  chip-button.tsx  combo.stories.tsx  combo.tsx  confirm-combo-button.tsx  confirm-range-button.tsx  confirm-ranking-button.tsx  confirm-ranking.skeleton.tsx  confirm-ranking.tsx  data.json  distribution-chart.tsx  distribution-table.tsx  footer-layout.tsx  (+33 more)
(+595 files in other folders)
