[package]
name = "pokepra_rust_experimental"
version = "0.1.0"
edition = "2021"
description = "Experimental rs-poker playground for pokepra app features"
license = "MIT"

[dependencies]
rs_poker = { version = "5.0.0", default-features = false, features = ["arena", "serde"] }
little-sorry = "3.0.0"
rand = { version = "0.10", default-features = false, features = ["std"] }
rand_chacha = { version = "0.10", default-features = false, features = ["std"] }
