[package]
name = "pokepra_wasm"
version = "0.1.0"
edition = "2021"
description = "rs-poker backed WASM bindings for pokepra"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rs_poker = { version = "5.0.0", default-features = false }
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }
getrandom = { version = "0.4", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
